--- a/package.json
+++ b/package.json
@@ -212,6 +212,7 @@
     "bcryptjs": "^2.4.3",
     "btoa": "^1.1.2",
     "chalk": "1.1.3",
+    "chart.js": "^1.1.1",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
     "express": "4.14.0",
@@ -224,6 +225,7 @@
     "lodash": "4.17.2",
     "minimist": "1.2.0",
     "react": "15.4.1",
+    "react-chartjs": "^0.8.0",
     "react-dom": "15.4.1",
     "react-helmet": "3.2.2",
     "react-intl": "2.1.5",
