--- a/package.json
+++ b/package.json
@@ -224,6 +224,7 @@
     "localStorage": "^1.0.3",
     "lodash": "4.17.2",
     "minimist": "1.2.0",
+    "msal": "^0.1.1",
     "react": "15.4.1",
     "react-chartjs": "^0.8.0",
     "react-dom": "15.4.1",
@@ -272,7 +273,7 @@
     "eslint-plugin-react": "6.7.1",
     "eslint-plugin-redux-saga": "0.1.5",
     "eventsource-polyfill": "0.9.6",
-    "exports-loader": "0.6.3",
+    "exports-loader": "^0.6.3",
     "file-loader": "0.9.0",
     "html-loader": "0.4.4",
     "html-webpack-plugin": "^2.24.1",
